Going to translate all languages from Enum LingvaLanguage (pain) and now !calc 2^21 doesn't return 0